# MeshSocket

./: .gitignore  Dockerfile.python  Package.swift  README.md  docker-compose.yml  test.sh
.github/workflows/: publish.yml
Python/: README.md  pyproject.toml  socketCore.py  socket_server.py  test_handlers.py
Python/bridges/: cider_bridge.py  test_cider_bridge.py
Python/meshsocket/: __init__.py
Swift/: Package.swift
Swift/Sources/MeshSocket/: MeshSocket.swift
Swift/Tests/MeshSocketTests/: HandlerLifecycleTests.swift  MeshSocketIntegrationTests.swift
docs/superpowers/specs/: 2026-06-03-swift-meshsocket-port-design.md
test_helpers/: echo_client.py
